deploy/kubernetes/base/immich/machine-learning-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: machine-learning
spec:
  replicas: 1
  selector:
    matchLabels:
      app: machine-learning
  template:
    metadata:
      labels:
        app: machine-learning
    spec:
      containers:
        - name: machine-learning
          image: ghcr.io/immich-app/immich-machine-learning:v2.4.1
          ports:
            - containerPort: 3003
          volumeMounts:
            - name: model-cache
              mountPath: /cache
      volumes:
        - name: model-cache
          persistentVolumeClaim:
            claimName: machine-learning-model-cache
