deploy/kubernetes/base/immich/server-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  namespace: immich
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: server
          image: ghcr.io/immich-app/immich-server:v2.4.1
          ports:
            - containerPort: 2283
          volumeMounts:
            - name: upload
              mountPath: /usr/src/app/upload
      volumes:
        - name: upload
          persistentVolumeClaim:
            claimName: upload
