deploy/kubernetes/base/immich/database-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: database-headless
  namespace: immich
spec:
  clusterIP: None
  selector:
    app: database
  ports:
    - port: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: immich
spec:
  selector:
    app: database
  ports:
    - port: 5432
      targetPort: 5432
