deploy/kubernetes/base/immich/machine-learning-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: machine-learning
  namespace: immich
spec:
  selector:
    app: machine-learning
  ports:
    - port: 3003
      targetPort: 3003
