deploy/kubernetes/base/immich/redis-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redis-headless
  namespace: immich
spec:
  clusterIP: None
  selector:
    app: redis
  ports:
    - port: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: immich
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
