deploy/kubernetes/base/immich/server-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: immich
spec:
  selector:
    app: server
  ports:
    - port: 2283
      targetPort: 2283
