deploy/kubernetes/base/immich/machine-learning-netpol.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: machine-learning-netpol-egress
spec:
  podSelector:
    matchLabels:
      connectsToMachineLearning: "true"
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: machine-learning
      ports:
        - protocol: TCP
          port: 3003
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: machine-learning-netpol-ingress
spec:
  podSelector:
    matchLabels:
      app: machine-learning
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              connectsToMachineLearning: "true"
      ports:
        - protocol: TCP
          port: 3003
